# AgentFlow

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  start.bat  start.ps1  start.sh  项目目录结构.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/agentflow/: __init__.py
backend/agentflow/api/: app.py  deps.py
backend/agentflow/api/routes/: knowledge.py  logs.py  marketplace.py  plugin.py  workflow.py
backend/agentflow/core/: config.py  db.py  exceptions.py  llm.py  object_storage.py  redis_client.py
backend/agentflow/engine/: compiler.py  dsl.py  runtime.py  state.py  validator.py  variable.py
backend/agentflow/knowledge/: embedding.py  indexer.py  llama_setup.py  loader.py  retriever.py  service.py  splitter.py
backend/agentflow/marketplace/: exporter.py  importer.py  service.py
backend/agentflow/models/: __init__.py  knowledge.py  marketplace.py  plugin.py  user.py  workflow.py
backend/agentflow/observability/: debug_logger.py  tracer.py
backend/agentflow/plugins/: __init__.py  registry.py  runtime.py  schema.py  service.py
backend/agentflow/repositories/: knowledge_repo.py  log_repo.py  plugin_repo.py  workflow_repo.py
backend/agentflow/sandbox/: base.py  node_sandbox.py  python_sandbox.py  templates.py
backend/agentflow/schemas/: knowledge.py  log.py  plugin.py  workflow.py
backend/agentflow/state/: checkpointer.py  session_store.py
backend/agentflow/utils/: ids.py  logger.py
backend/tests/: conftest.py  test_api.py  test_compiler.py  test_integration.py  test_nodes.py  test_retriever.py  test_sandbox.py
(+106 files in other folders)
