[project]
name = "agentflow"
version = "0.1.0"
description = "Visual Agent workflow orchestration platform (LangGraph-based)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agentflow"]
